--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -21,7 +21,7 @@
    <double>1.000000000000000</double>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTableView" name="aDataView">
+   <widget class="QListView" name="aDataView">
     <property name="geometry">
      <rect>
       <x>460</x>
@@ -252,6 +252,19 @@
      <string>Дискретизация</string>
     </property>
    </widget>
+   <zorder>groupBox</zorder>
+   <zorder>aDataView</zorder>
+   <zorder>diagnostic</zorder>
+   <zorder>startperiod</zorder>
+   <zorder>setsensorperiod</zorder>
+   <zorder>endperiod</zorder>
+   <zorder>label</zorder>
+   <zorder>label_2</zorder>
+   <zorder>line</zorder>
+   <zorder>line_2</zorder>
+   <zorder>groupBox_2</zorder>
+   <zorder>sampling</zorder>
+   <zorder>setsampling</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
