--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>798</width>
+    <width>811</width>
     <height>597</height>
    </rect>
   </property>
@@ -27,7 +27,7 @@
       <x>460</x>
       <y>60</y>
       <width>301</width>
-      <height>161</height>
+      <height>271</height>
      </rect>
     </property>
    </widget>
@@ -37,7 +37,7 @@
       <x>440</x>
       <y>30</y>
       <width>341</width>
-      <height>201</height>
+      <height>321</height>
      </rect>
     </property>
     <property name="font">
@@ -55,7 +55,7 @@
     <property name="geometry">
      <rect>
       <x>620</x>
-      <y>420</y>
+      <y>500</y>
       <width>141</width>
       <height>31</height>
      </rect>
@@ -67,8 +67,8 @@
    <widget class="QDateEdit" name="startperiod">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>260</y>
+      <x>110</x>
+      <y>400</y>
       <width>121</width>
       <height>21</height>
      </rect>
@@ -90,8 +90,8 @@
    <widget class="QPushButton" name="setsensorperiod">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>270</y>
+      <x>240</x>
+      <y>410</y>
       <width>141</width>
       <height>31</height>
      </rect>
@@ -103,8 +103,8 @@
    <widget class="QDateEdit" name="endperiod">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>290</y>
+      <x>110</x>
+      <y>430</y>
       <width>121</width>
       <height>21</height>
      </rect>
@@ -136,8 +136,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>260</y>
+      <x>80</x>
+      <y>400</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -156,8 +156,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>290</y>
+      <x>80</x>
+      <y>430</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -165,8 +165,8 @@
     <property name="font">
      <font>
       <pointsize>10</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="text">
@@ -177,7 +177,7 @@
     <property name="geometry">
      <rect>
       <x>460</x>
-      <y>320</y>
+      <y>380</y>
       <width>301</width>
       <height>20</height>
      </rect>
@@ -189,8 +189,8 @@
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>230</y>
+      <x>80</x>
+      <y>380</y>
       <width>301</width>
       <height>16</height>
      </rect>
@@ -232,8 +232,8 @@
    <widget class="QSpinBox" name="sampling">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>350</y>
+      <x>500</x>
+      <y>420</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -243,13 +243,59 @@
     <property name="geometry">
      <rect>
       <x>620</x>
-      <y>350</y>
+      <y>410</y>
       <width>141</width>
-      <height>31</height>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>Дискретизация</string>
+     <string>Установить интервал </string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>420</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>секунд</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line_3">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>460</y>
+      <width>301</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_4">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>460</y>
+      <width>301</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
     </property>
    </widget>
    <zorder>groupBox</zorder>
@@ -265,13 +311,16 @@
    <zorder>groupBox_2</zorder>
    <zorder>sampling</zorder>
    <zorder>setsampling</zorder>
+   <zorder>label_3</zorder>
+   <zorder>line_3</zorder>
+   <zorder>line_4</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>798</width>
+     <width>811</width>
      <height>21</height>
     </rect>
    </property>
