--- a/authorizationwindow.ui
+++ b/authorizationwindow.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>874</width>
     <height>600</height>
    </rect>
   </property>
@@ -30,14 +30,15 @@
    <bool>false</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">background-color: rgb(69, 69, 69);
+color: rgb(250, 255, 255);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>110</y>
+      <x>230</x>
+      <y>140</y>
       <width>401</width>
       <height>261</height>
      </rect>
@@ -49,15 +50,25 @@
       <bold>true</bold>
      </font>
     </property>
+    <property name="statusTip">
+     <string/>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(56, 56, 56);
+color: rgb(255, 255, 255);</string>
+    </property>
     <property name="title">
      <string>Авторизация</string>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
     </property>
     <widget class="QPushButton" name="ok">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>210</y>
-       <width>101</width>
+       <x>210</x>
+       <y>200</y>
+       <width>161</width>
        <height>31</height>
       </rect>
      </property>
@@ -67,6 +78,10 @@
        <weight>75</weight>
        <bold>true</bold>
       </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(222, 142, 55);
+color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
       <string>Войти </string>
@@ -107,10 +122,17 @@
       <enum>Qt::LeftToRight</enum>
      </property>
      <property name="autoFillBackground">
-      <bool>true</bool>
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(48, 48, 48);
+color: rgb(247, 247, 247);</string>
      </property>
      <property name="text">
       <string>Логин</string>
+     </property>
+     <property name="frame">
+      <bool>false</bool>
      </property>
      <property name="dragEnabled">
       <bool>true</bool>
@@ -144,8 +166,15 @@
        <bold>true</bold>
       </font>
      </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(48, 48, 48);
+color: rgb(247, 247, 247);</string>
+     </property>
      <property name="text">
       <string>Пароль</string>
+     </property>
+     <property name="frame">
+      <bool>false</bool>
      </property>
      <property name="clearButtonEnabled">
       <bool>true</bool>
@@ -154,9 +183,9 @@
     <widget class="QPushButton" name="registration">
      <property name="geometry">
       <rect>
-       <x>170</x>
-       <y>210</y>
-       <width>101</width>
+       <x>40</x>
+       <y>200</y>
+       <width>161</width>
        <height>31</height>
       </rect>
      </property>
@@ -166,6 +195,10 @@
        <weight>75</weight>
        <bold>true</bold>
       </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(222, 142, 55);
+color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
       <string>Регистрация</string>
@@ -178,7 +211,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>874</width>
      <height>21</height>
     </rect>
    </property>
