--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>811</width>
-    <height>597</height>
+    <height>596</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,6 +20,10 @@
   <property name="windowOpacity">
    <double>1.000000000000000</double>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(69, 69, 69);
+color: rgb(250, 255, 255);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QListWidget" name="adataview">
     <property name="geometry">
@@ -29,6 +33,10 @@
       <width>301</width>
       <height>271</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(250, 250, 250);
+color: rgb(48, 48, 48);</string>
     </property>
    </widget>
    <widget class="QGroupBox" name="groupBox">
@@ -47,8 +55,15 @@
       <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(56, 56, 56);
+color: rgb(255, 255, 255);</string>
+    </property>
     <property name="title">
      <string>Результат запроса</string>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QPushButton" name="diagnostic">
@@ -59,6 +74,16 @@
       <width>141</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(222, 142, 55);
+color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
      <string>Диагностика</string>
@@ -72,6 +97,10 @@
       <width>121</width>
       <height>21</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(250, 250, 250);
+color: rgb(48, 48, 48);</string>
     </property>
     <property name="minimumDateTime">
      <datetime>
@@ -96,6 +125,16 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(222, 142, 55);
+color: rgb(255, 255, 255);</string>
+    </property>
     <property name="text">
      <string>Установить период</string>
     </property>
@@ -108,6 +147,10 @@
       <width>121</width>
       <height>21</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(250, 250, 250);
+color: rgb(48, 48, 48);</string>
     </property>
     <property name="dateTime">
      <datetime>
@@ -138,8 +181,8 @@
      <rect>
       <x>80</x>
       <y>400</y>
-      <width>47</width>
-      <height>13</height>
+      <width>21</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="font">
@@ -148,6 +191,10 @@
       <weight>75</weight>
       <bold>true</bold>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">
+color: rgb(250, 255, 255);</string>
     </property>
     <property name="text">
      <string>с</string>
@@ -158,16 +205,20 @@
      <rect>
       <x>80</x>
       <y>430</y>
-      <width>47</width>
-      <height>13</height>
+      <width>21</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>10</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">
+color: rgb(250, 255, 255);</string>
     </property>
     <property name="text">
      <string>по</string>
@@ -215,8 +266,15 @@
       <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(56, 56, 56);
+color: rgb(255, 255, 255);</string>
+    </property>
     <property name="title">
      <string>Изменение температуры</string>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
     </property>
     <widget class="PlotWidget" name="GraphWidget" native="true">
      <property name="geometry">
@@ -226,6 +284,10 @@
        <width>361</width>
        <height>271</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(250, 250, 250);
+color: rgb(48, 48, 48);</string>
      </property>
     </widget>
    </widget>
@@ -238,15 +300,29 @@
       <height>22</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(250, 250, 250);
+color: rgb(48, 48, 48);</string>
+    </property>
    </widget>
    <widget class="QPushButton" name="setsampling">
     <property name="geometry">
      <rect>
       <x>620</x>
-      <y>410</y>
+      <y>420</y>
       <width>141</width>
-      <height>41</height>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(222, 142, 55);
+color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
      <string>Установить интервал </string>
@@ -267,6 +343,10 @@
       <weight>75</weight>
       <bold>true</bold>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">
+color: rgb(250, 255, 255);</string>
     </property>
     <property name="text">
      <string>секунд</string>
